--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Repositorio</title>
 </head>
 <body>
+    <header class="container">
+
     <img src="ING/avatar-perfil.png" alt="avatar-perfil"
     <p >Sou a Brenda</p>
+    <h1>Tenho 17 anos</h1>
+    <p>Sou estudante do ensino médio</p>
+    <p>Minhas habilidades</p>
+    <div>
+        <p>Gosto de cozinhar</p>
+        <p>Escrever</p>
+        <p>gosto de fazer penteados</p>
+    </div>
+    </header>
 </body>
 </html>
