--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
 </head>
 <body>
     <header class="container">
-
-    <img src="ING/avatar-perfil.png" alt="avatar-perfil"
-    <p >Sou a Brenda</p>
-    <h1>Tenho 17 anos</h1>
-    <p>Sou estudante do ensino médio</p>
-    <p>Minhas habilidades</p>
-    <div>
-        <p>Gosto de cozinhar</p>
-        <p>Escrever</p>
-        <p>gosto de fazer penteados</p>
-    </div>
-    </header>
+    <img src="ING/avatar-perfil.png" alt="avatar"
+<p>Sou a Brenda</p>
+<h1>Eu sou Estudante</h1>
+<p>Eu tenho 17 anos</p>
+<p>Minhas Habiladas</p>
+<div>
+    </p>Eu gosto de cozinhar</p>
+    <p>Eu gosto de escrever</p>
+    <p>Eu gosto de ler</p>
+<div>
+</header>
 </body>
 </html>
