--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <header class="container">
-    <img src="ING/avatar-perfil.png" alt="avatar"
-<p>Sou a Brenda</p>
+    <img src="ING/avatar-perfil.png" alt="avatar-perfil" alt="avatar" class="rounded-circle"width="150"
+<p class="lead">Sou a Brenda</p>
+
 <h1>Eu sou Estudante</h1>
 <p>Eu tenho 17 anos</p>
 <p>Minhas Habiladas</p>
 <div>
-    </p>Eu gosto de cozinhar</p>
-    <p>Eu gosto de escrever</p>
-    <p>Eu gosto de ler</p>
+    <p class="badge bg-secondary">Eu gosto de cozinhar</p>
+    <p class="badge bg-secondary">Eu gosto de escrever</p>
+    <p class="badge bg-secondary">Eu gosto de ler</p>
 <div>
 </header>
 </body>
